--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -239,6 +239,41 @@ body {
 		text-align: center;
 	}
 }
+.summary {
+	@include posAbsuluteCenter;
+	@include flexCenter;
+	flex-direction: column;
+	display: none;
+	width: 100%;
+	height: 100%;
+	&__informations {
+		position: relative;
+		background-color: royalblue;
+		height: 30%;
+		width: 100%;
+		&__panel {
+			@include posAbsuluteCenter;
+			display: flex;
+			align-items: flex;
+			justify-content: space-around;
+			flex-wrap: wrap;
+			flex-direction: column;
+			height: 100%;
+			width: 100%;
+			div {
+				:first-child,:last-child{
+				margin-top: 10px;	
+				}
+				margin-left: 10%;
+			}
+		}
+	}
+	&__flights {
+		background-color: white;
+		height: 80%;
+		width: 100vw;
+	}
+}
 
 .footer {
 	height: 50px;
