--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -241,30 +241,79 @@ body {
 }
 .summary {
 	@include posAbsuluteCenter;
-	@include flexCenter;
+	display: flex;
+	justify-content: center;
+	align-items: flex-start;
 	flex-direction: column;
-	display: none;
+	// display: none;
 	width: 100%;
 	height: 100%;
 	&__informations {
+		&__header {
+			text-align: center;
+			font-style: italic;
+		}
 		position: relative;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-evenly;
 		background-color: royalblue;
 		height: 30%;
 		width: 100%;
-		&__panel {
-			@include posAbsuluteCenter;
+		padding: 5px;
+		&__panel-first,
+		&__panel-second {
+			i {
+				margin-bottom: 5px;
+			}
 			display: flex;
-			align-items: flex;
-			justify-content: space-around;
+			align-items: flex-start;
+			justify-content: space-between;
 			flex-wrap: wrap;
-			flex-direction: column;
-			height: 100%;
+			margin-top: 5px;
+			height: 20%;
 			width: 100%;
+			background-color: $secondaryColor;
+			padding: 5px;
+
 			div {
-				:first-child,:last-child{
-				margin-top: 10px;	
+				@include flexCenter;
+				flex-direction: column;
+				width: 110px;
+				text-align: center;
+				font-size: 14px;
+			}
+		}
+
+		&__panel-first {
+			&__departure-date {
+				div {
+					flex-direction: row;
+					margin-bottom: 5px;
+					i {
+						margin: 0 5px;
+					}
 				}
-				margin-left: 10%;
+			}
+		}
+		&__panel-second {
+			&__return-date {
+				div {
+					flex-direction: row;
+					margin-bottom: 5px;
+					i {
+						margin: 0 5px;
+					}
+				}
+			}
+			&__passengers {
+				div {
+					display: inline-block;
+					margin: 2px 0;
+					i {
+						margin: 0 2px;
+					}
+				}
 			}
 		}
 	}
