--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -36,9 +36,16 @@ body {
 	align-items: center;
 	background-color: #e2d5d573;
 	height: 75px;
-	&__weather {
-		font-size: 20px;
+	&__date-hour,
+	&__arrival-weather,
+	&__login {
+		width: 100px;
 	}
+	&__arrival-weather,
+	&__login {
+		@include flexCenter;
+	}
+
 	&__date-hour {
 		@include flexCenter();
 		align-items: flex-start;
@@ -241,13 +248,14 @@ body {
 }
 .summary {
 	@include posAbsuluteCenter;
-	display: flex;
+	@include imageCenter('/src/images/clouds640.jpg');
+	// display: flex;
 	justify-content: center;
 	align-items: flex-start;
 	flex-direction: column;
-	// display: none;
+	display: none;
+	height: 100vh;
 	width: 100%;
-	height: 100%;
 	&__informations {
 		&__header {
 			text-align: center;
@@ -257,31 +265,32 @@ body {
 		display: flex;
 		flex-direction: column;
 		justify-content: space-evenly;
-		background-color: royalblue;
 		height: 30%;
 		width: 100%;
 		padding: 5px;
+		border: 10px double $primaryColor;
 		&__panel-first,
 		&__panel-second {
-			i {
-				margin-bottom: 5px;
-			}
 			display: flex;
 			align-items: flex-start;
 			justify-content: space-between;
 			flex-wrap: wrap;
 			margin-top: 5px;
-			height: 20%;
+			padding: 7px 5px;
 			width: 100%;
-			background-color: $secondaryColor;
-			padding: 5px;
-
+			background-color: $primaryColor;
+			color: rgb(233, 229, 229);
+			border-radius: 10px;
+			font-weight: 400;
 			div {
 				@include flexCenter;
 				flex-direction: column;
 				width: 110px;
 				text-align: center;
 				font-size: 14px;
+			}
+			i {
+				margin-bottom: 5px;
 			}
 		}
 
@@ -318,7 +327,6 @@ body {
 		}
 	}
 	&__flights {
-		background-color: white;
 		height: 80%;
 		width: 100vw;
 	}
