--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -256,7 +256,7 @@ body {
 	justify-content: center;
 	align-items: flex-start;
 	flex-direction: column;
-	// display: none;
+	display: none;
 	width: 100%;
 	&__informations {
 		&__header {
