--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -45,16 +45,16 @@ body {
 	&__login {
 		@include flexCenter;
 	}
-	&__arrival-weather {
+	&__arrival-weather,
+	&__date-hour {
 		text-align: center;
+		font-size: $navFont;
 	}
 
 	&__date-hour {
 		@include flexCenter();
 		align-items: flex-start;
 		flex-direction: column;
-		width: 100px;
-		font-size: $navFont;
 
 		&__date {
 			&--margin {
@@ -175,7 +175,7 @@ body {
 .container {
 	position: relative;
 	height: 650px;
-
+	// display: none;
 	&__panel {
 		height: 100%;
 		background-color: $secondaryColor;
@@ -333,7 +333,30 @@ body {
 	&__flights {
 		background-color: $secondaryColor;
 		height: 80%;
-		width: 100vw;
+		width: 100%;
+
+		&__flightInfo {
+			display: grid;
+			grid-template-columns: repeat(4, auto);
+			grid-template-rows: 1fr 2fr;
+			margin: 20px auto;
+			width: 90%;
+			height: 120px;
+			background-color: $primaryColor;
+			border-radius: 10px;
+			color: $whiteColor;
+			border: 1px solid $secondaryColor;
+			p {
+				margin-top: 5px;
+				text-align: center;
+			}
+		}
+		&__flightErrorInfo {
+			margin: 50px 20px 0;
+			font-size: 20px;
+			text-align: center;
+			font-weight: 700;
+		}
 	}
 }
 
@@ -369,6 +392,15 @@ body {
 	}
 }
 
+@keyframes showInfoError {
+	from {
+		top: -50%;
+	}
+	to {
+		top: 30%;
+	}
+}
+
 @media screen and (min-width: 768px) {
 	.upper-div,
 	.bottom-div {
@@ -389,11 +421,16 @@ body {
 
 	.navigation {
 		height: 100px;
-		&__date-hour {
+		&__date-hour,
+		&__arrival-weather,
+		&__login {
+			width: 140px;
+		}
+		&__date-hour,
+		&__arrival-weather {
 			font-size: 20px;
 			&__date {
 				&--margin {
-					width: 140px;
 					margin: 15px 0;
 				}
 			}
@@ -415,6 +452,7 @@ body {
 		&__login-panel {
 			height: 1000px;
 			background-image: url('/src/images/sky1280.jpg');
+			top: 70%;
 			&__inputs {
 				input {
 					padding: 10px;
@@ -490,6 +528,34 @@ body {
 		}
 	}
 
+	.summary {
+		&__informations {
+			height: 45%;
+			&__header {
+				font-size: 30px;
+			}
+			&__panel-first,
+			&__panel-second {
+				padding: 10px 20px;
+				div {
+					width: 130px;
+					font-size: 16px;
+				}
+			}
+		}
+
+		&__flights {
+			&__flightInfo {
+				margin: 30px auto 20px;
+				height: 150px;
+			}
+			&__flightErrorInfo {
+				margin: 50px 15px 0;
+				font-size: 23px;
+			}
+		}
+	}
+
 	.footer {
 		height: 75px;
 		&__rights {
@@ -511,6 +577,15 @@ body {
 			}
 		}
 	}
+
+	@keyframes showInfoError {
+		from {
+			top: -50%;
+		}
+		to {
+			top: 45%;
+		}
+	}
 }
 
 @media screen and (min-width: 992px) {
@@ -527,11 +602,15 @@ body {
 	}
 	.navigation {
 		height: 130px;
+		&__date-hour,
+		&__arrival-weather,
+		&__login {
+			width: 200px;
+		}
 		&__date-hour {
 			font-size: 20px;
 			&__date {
 				&--margin {
-					width: 200px;
 					margin: 18px 0;
 				}
 			}
@@ -560,6 +639,7 @@ body {
 		}
 		&__login-panel {
 			height: 1250px;
+			top: 80%;
 			background-image: url('/src/images/sky1920.jpg');
 			&__inputs {
 				input {
@@ -626,6 +706,60 @@ body {
 			font-size: 25px;
 		}
 	}
+
+	.summary {
+		flex-direction: row;
+
+		&__informations {
+			justify-content: flex-start;
+			height: 100%;
+			width: 30%;
+			border: none;
+			&__header {
+				margin: 50px 0;
+				color: royalblue;
+			}
+			&__panel-first,
+			&__panel-second {
+				margin: 15px 0;
+				background: none;
+				color: royalblue;
+				div {
+					display: inline;
+					margin: 10px 0;
+					width: 200px;
+					height: 50px;
+					line-height: 50px;
+					font-size: 20px;
+				}
+				i {
+					text-align: left;
+					margin-right: 20px;
+				}
+			}
+		}
+		&__flights {
+			position: relative;
+			background-color: $secondaryColor;
+			height: 100%;
+			width: 80%;
+
+			&__flightInfo {
+				margin: 30px auto 20px;
+				height: 200px;
+				border: 4px solid $primaryColor;
+				border-radius: 25px;
+				background: none;
+			}
+			&__flightErrorInfo {
+				position: absolute;
+				top: 50%;
+				margin: 0;
+				transform: translateY(-50%);
+		
+			}
+		}
+	}
 	.footer {
 		height: 80px;
 		&__rights {
@@ -636,6 +770,15 @@ body {
 			&__link {
 				margin: 0 64px;
 			}
+		}
+	}
+
+	@keyframes showInfoError {
+		from {
+			top: -50%;
+		}
+		to {
+			top: 50%;
 		}
 	}
 }
@@ -666,14 +809,5 @@ body {
 	to {
 		left: 0%;
 		margin: 0 auto;
-	}
-}
-
-@keyframes showInfoError {
-	from {
-		top: -50%;
-	}
-	to {
-		top: 30%;
 	}
 }
