--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -338,7 +338,7 @@ body {
 		&__flightInfo {
 			display: grid;
 			grid-template-columns: repeat(4, auto);
-			grid-template-rows: 1fr 2fr;
+			grid-template-rows: 1fr 3fr;
 			margin: 20px auto;
 			width: 90%;
 			height: 120px;
@@ -714,7 +714,7 @@ body {
 
 	.summary {
 		flex-direction: row;
-
+		height: 800px;
 		&__informations {
 			justify-content: flex-start;
 			height: 100%;
@@ -735,6 +735,7 @@ body {
 					width: 180px;
 					height: 50px;
 					line-height: 50px;
+					text-align: left;
 					font-size: 20px;
 				}
 				i {
@@ -751,13 +752,26 @@ body {
 
 			&__flightInfo {
 				margin: 30px auto 20px;
-				height: 200px;
+				height: 170px;
 				border: 4px solid $primaryColor;
-				border-radius: 25px;
+				border-radius: 20px;
 				background: none;
+
+				:first-child {
+					border-top-left-radius: 16px;
+				}
+				:nth-child(4) {
+					border-top-right-radius: 16px;
+				}
+				:nth-child(-n + 4) {
+					border-bottom: 2px outset $primaryColor;
+					background-color: $primaryColor;
+					color: $whiteColor;
+				}
 				&__paragraph {
+					@include flexCenter;
 					color: royalblue;
-					margin-top: 15px;
+					margin-top: 0;
 					font-size: 20px;
 				}
 			}
