Mile stone in project. Finished fetching data and upgraded code by simply some of it's fragment. Changed some style

--- a/src/scss/partials/_mixins.scss
+++ b/src/scss/partials/_mixins.scss
@@ -3,6 +3,13 @@
 	justify-content: center;
 	align-items: center;
 }
+
+@mixin dispayFlex($jc, $ai) {
+	display: flex;
+	justify-content: $jc;
+	align-items: $ai;
+}
+
 @mixin posAbsuluteCenter() {
 	position: absolute;
 	top: 50%;
